<resources>
    <string name="app_name">TipCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_total">Bill total</string>
    <string name="choose_tip">Choose tip</string>
    <string name="split_by">Split by %d</string>
    <string name="rounding_amount">Rounding amount</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="_25">25%</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="base">Base</string>
    <string name="tip">Tip</string>
    <string name="per_person">Per person</string>
    <string name="person">Person</string>
    <string name="total">Total</string>
    <string name="_00_00">00.00</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="empty_message" translatable="true">Save error. Fields cannot be empty</string>
    <string name="success_save_message" translatable="true">Successfully saved!</string>
    <string name="empty_search" translatable="true">No records</string>
    <string name="send_data">Date: %s \nBase: %.2f \nTip: %.2f \nPerson: %d \nPer person: %.2f \nTotal: %.2f</string>
    <string name="empty_date_list" translatable="true">No records by this date</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="contact_with_us">Contact with us</string>
    <string name="rate_us">Rate us</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="enjoying_this_app">Enjoying this app?</string>
    <string name="we_appreciate_your_support_in_every_way">We appreciate your support in every way!</string>
    <string name="version">1.0.0</string>
    <string name="select_theme">Select Theme</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string name="ok">Ok</string>
    <string name="select_language">Select Language</string>
    <string-array name="language">
        <item>English</item>
        <item>Ukrainian</item>
        <item>Russian</item>
        <item>German</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>
    <string name="application_not_found">Application not found</string>
    <string name="send_email">Send email</string>
    <string name="coffee_price">2.99$</string>
    <string name="coffee">Coffee</string>
</resources>