<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.calculate.CalculateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/FragmentTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/fragment_title_margin_top"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/calculate_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bill_text_input"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_total"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/fragment_subtitle_margin_top"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bill_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/choose_tip_title_text"
            style="@style/FragmentSubTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_subtitle_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/choose_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_text_input" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/percent_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_marginTop="@dimen/fragment_content_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_tip_title_text">

            <com.google.android.material.chip.Chip
                android:id="@+id/tenChip"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10" />

            <com.google.android.material.chip.Chip
                android:id="@+id/fifteenChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15" />

            <com.google.android.material.chip.Chip
                android:id="@+id/twentyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />

            <com.google.android.material.chip.Chip
                android:id="@+id/twentyfiveChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/split_by_title_text"
            style="@style/FragmentSubTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_subtitle_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/split_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percent_choose" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/split_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="1"
            android:max="10"
            android:progress="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/fragment_content_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_by_title_text" />

        <TextView
            android:id="@+id/rounding_title_text"
            style="@style/FragmentSubTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_subtitle_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/rounding_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_seekbar" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/rounding_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_content_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rounding_title_text"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/upRoundingChip"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up" />

            <com.google.android.material.chip.Chip
                android:id="@+id/downRoundingChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/result_content_background"
            android:layout_marginTop="@dimen/result_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintTop_toBottomOf="@+id/rounding_choose">

            <TextView
                android:id="@+id/textView"
                style="@style/ResultTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/base"
                android:layout_marginTop="@dimen/result_content_margin_top"
                android:layout_marginStart="@dimen/result_content_margin_start"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                app:layout_constraintEnd_toStartOf="@id/base_result_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/base_result_text"
                style="@style/ResultSumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/result_content_margin_top"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                android:text="@string/_00_00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/ResultTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginStart="@dimen/result_content_margin_start"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                app:layout_constraintEnd_toStartOf="@id/tip_result_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tip_result_text"
                style="@style/ResultSumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                android:text="@string/_00_00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/base_result_text" />

            <TextView
                android:id="@+id/textView3"
                style="@style/ResultTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/per_person"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginStart="@dimen/result_content_margin_start"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                app:layout_constraintEnd_toStartOf="@id/per_person_result_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/per_person_result_text"
                style="@style/ResultSumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                android:text="@string/_00_00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/tip_result_text" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/devider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/light_green"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginStart="@dimen/result_content_margin_start"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/ResultTotalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginStart="@dimen/result_content_margin_start"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                android:layout_marginBottom="@dimen/result_content_margin_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/total_result_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/devider" />

            <TextView
                android:id="@+id/total_result_text"
                style="@style/ResultTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/result_content_content_margin_top"
                android:layout_marginEnd="@dimen/result_content_margin_end"
                android:text="@string/_00_00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/devider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            style="@style/FillButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_marginTop="@dimen/fragment_subtitle_margin_top"
            android:layout_marginBottom="@dimen/fragment_title_margin_top"
            android:background="@drawable/fill_button_background"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>