<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/FragmentTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_marginTop="@dimen/fragment_title_margin_top"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/general"
            style="@style/FragmentSubTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/setting_subtitle_margin_top"
            android:text="@string/general"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/theme_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/general">

            <ImageView
                android:id="@+id/theme_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_theme"
                app:layout_constraintBottom_toBottomOf="@+id/theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/theme" />

            <TextView
                android:id="@+id/theme"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/theme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/theme_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/theme" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/language_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_item__margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theme_layout">

            <ImageView
                android:id="@+id/language_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_language"
                app:layout_constraintBottom_toBottomOf="@+id/language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/language" />

            <TextView
                android:id="@+id/language"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/language_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrow_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/language" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/contact"
            style="@style/FragmentSubTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/setting_subtitle_margin_top"
            android:text="@string/contact_with_us"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact">

            <ImageView
                android:id="@+id/rate_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_rate"
                app:layout_constraintBottom_toBottomOf="@+id/rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rate" />

            <TextView
                android:id="@+id/rate"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/rate_us"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rate_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_item__margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_layout">

            <ImageView
                android:id="@+id/email_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_emai"
                app:layout_constraintBottom_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email" />

            <TextView
                android:id="@+id/email"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/contact"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/enjoying"
            style="@style/FragmentSubTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_subtitle_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/enjoying_this_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_layout" />

        <TextView
            android:id="@+id/appreciate"
            style="@style/FragmentSubMenuTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/we_appreciate_your_support_in_every_way"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enjoying" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/setting_menu_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appreciate"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/donate_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/setting_menu_margin_top"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appreciate"
            tools:listitem="@layout/donate_item" />

        <TextView
            android:id="@+id/about"
            style="@style/FragmentSubTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_subtitle_margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donate_choose" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/privacy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about">

            <ImageView
                android:id="@+id/privacy_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_privacy"
                app:layout_constraintBottom_toBottomOf="@+id/privacy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/privacy" />

            <TextView
                android:id="@+id/privacy"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/privacy_policy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/privacy_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/terms_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_item__margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_layout">

            <ImageView
                android:id="@+id/terms_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_terms"
                app:layout_constraintBottom_toBottomOf="@+id/terms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/terms" />

            <TextView
                android:id="@+id/terms"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/terms_and_conditions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/terms_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/version_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_menu_item__margin_top"
            android:layout_marginBottom="@dimen/fragment_title_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_layout">

            <ImageView
                android:id="@+id/version_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:src="@drawable/ic_version"
                app:layout_constraintBottom_toBottomOf="@+id/version"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/version" />

            <TextView
                android:id="@+id/version"
                style="@style/FragmentSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_menu_margin_start"
                android:text="@string/version"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/version_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>